--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-server.port=${SERVER_PORT}
-spring.datasource.url=${JAWSDB_URL}
-spring.datasource.username=${USER_JAWSDB}
-spring.datasource.password=${PASS_JAWSDB}
+spring.datasource.url=jdbc:mysql://tci1sv5p33n0iorm:jhbjtpj5nd2rwdoq@wb39lt71kvkgdmw0.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/jqazsh8yl1ga96to
+spring.datasource.username=tci1sv5p33n0iorm
+spring.datasource.password=jhbjtpj5nd2rwdoq
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
