--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/minetourSoft
-spring.datasource.username=root
-spring.datasource.password=admin
+server.port=${SERVER_PORT}
+spring.datasource.url=${JAWSDB_URL}
+spring.datasource.username=${USER_JAWSDB}
+spring.datasource.password=${PASS_JAWSDB}
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
