--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://p2ul4kvw27hvsng1:xhule4x3pcrwwj2o@wb39lt71kvkgdmw0.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/tm392p3u6hkf4jys
-spring.datasource.username=p2ul4kvw27hvsng1
-spring.datasource.password=xhule4x3pcrwwj2o
+spring.datasource.url=jdbc:mysql://d4qjaww77lr2jlda:m9v4yzji6hrf58ce@wb39lt71kvkgdmw0.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/mtf8iv9lt3zwikzb
+spring.datasource.username=d4qjaww77lr2jlda
+spring.datasource.password=m9v4yzji6hrf58ce
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 app.client.url=https://back-mtsf-52b217321ea1.herokuapp.com/*
+
