--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://d4qjaww77lr2jlda:m9v4yzji6hrf58ce@wb39lt71kvkgdmw0.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/mtf8iv9lt3zwikzb
-spring.datasource.username=d4qjaww77lr2jlda
-spring.datasource.password=m9v4yzji6hrf58ce
+
+spring.datasource.url=jdbc:mysql://146.190.60.209:AVNS_5z7PXcWvVeAN9GEhCUK@db-mysql-nyc3-35905-do-user-15096162-0.c.db.ondigitalocean.com:25060/defaultdb?ssl-mode=REQUIRED&allowPublicKeyRetrieval=true&useSSL=true
+spring.datasource.username=doadmin
+spring.datasource.password=AVNS_5z7PXcWvVeAN9GEhCUK
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
