--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
-spring.datasource.url=jdbc:mysql://146.190.60.209:AVNS_5z7PXcWvVeAN9GEhCUK@db-mysql-nyc3-35905-do-user-15096162-0.c.db.ondigitalocean.com:25060/defaultdb?ssl-mode=REQUIRED&allowPublicKeyRetrieval=true&useSSL=true
+spring.datasource.url=jdbc:mysql://db-mysql-nyc3-35905-do-user-15096162-0.c.db.ondigitalocean.com:25060/defaultdb?ssl-mode=REQUIRED&allowPublicKeyRetrieval=true&useSSL=true
 spring.datasource.username=doadmin
 spring.datasource.password=AVNS_5z7PXcWvVeAN9GEhCUK
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-app.client.url= https://back-mtsoft-150e1b2ec696.herokuapp.com/*
+app.client.url= http://146.190.60.209/*
 
