--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
-
-spring.datasource.url=jdbc:mysql://db-mysql-nyc3-35905-do-user-15096162-0.c.db.ondigitalocean.com:25060/defaultdb?ssl-mode=REQUIRED&allowPublicKeyRetrieval=true&useSSL=true
-spring.datasource.username=doadmin
-spring.datasource.password=AVNS_5z7PXcWvVeAN9GEhCUK
+spring.datasource.url=jdbc:mysql://du9v9213h458ywup:hoe9f7gonf8lv1cz@x71wqc4m22j8e3ql.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/kqwmc4pb29nzr05p
+spring.datasource.username=du9v9213h458ywup
+spring.datasource.password=hoe9f7gonf8lv1cz
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-app.client.url= http://146.190.60.209/*
+app.client.url=http://localhost:4200/*
+
+
+
+
+
+##spring.datasource.url=jdbc:mysql://db-mysql-nyc3-35905-do-user-15096162-0.c.db.ondigitalocean.com:25060/defaultdb?ssl-mode=REQUIRED&allowPublicKeyRetrieval=true&useSSL=true
+##spring.datasource.username=doadmin
+##spring.datasource.password=AVNS_5z7PXcWvVeAN9GEhCUK
+##spring.jpa.hibernate.ddl-auto=update
+##spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##spring.jpa.show-sql=true
+##app.client.url= http://146.190.60.209/*
 
