--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://du9v9213h458ywup:hoe9f7gonf8lv1cz@x71wqc4m22j8e3ql.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/kqwmc4pb29nzr05p
-spring.datasource.username=du9v9213h458ywup
-spring.datasource.password=hoe9f7gonf8lv1cz
+spring.datasource.url=jdbc:mysql://kdn00fhjej4i1ofd:ogzd4fzsxgfpwgvn@x71wqc4m22j8e3ql.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/stvuy5f21cbc3dor
+spring.datasource.username=kdn00fhjej4i1ofd
+spring.datasource.password=ogzd4fzsxgfpwgvn
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
